...
                LocalEpisodeView(bundle: bundle)
              }
            }
          }
        }
      }
      .navigationTitle("Downloads")
    }
  }
}

private struct LocalEpisodeView: View {
  let bundle: EpisodeReleaseBundle
...
